Move frontend config to root

--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,7 @@ pids
 # Dependency directory
 # Commenting this out is preferred by some people, see
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
-/frontend/node_modules
+node_modules/
 /frontend/typings
 /frontend/ts-node
 
